--- a/environment.yml
+++ b/environment.yml
@@ -7,10 +7,13 @@ dependencies:
   - annotated-types
   - bqplot
   - fastcore
+  - immutables
   - ipydatagrid
   - ipyfilechooser
   - ipykernel
+  - ipyvuetify
   - ipywidgets>8
+  - markdown
   - matplotlib
   - jupyter
   - jupyterlab
@@ -18,10 +21,11 @@ dependencies:
   - nbdev
   - openpyxl
   - pandas
+  - pip
   - pydantic
   - python=3.11
   - statsmodels
   - traittypes
   - voila>=0.5.6
-  - pip
-    - ipyautoui
+  - pip:
+      - ipyautoui
