--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 .ipynb_checkpoints
 data/output.csv
 dashboard/*.py
+dashboard_pydantic
+dashboard_solara
 __pycache__
 .vscode/settings.json
 voici_project/_output/
 voici_project/.jupyterlite.doit.db
+ploomber
